--- a/BookingSeatPlan/BookingSeatPlan.csproj
+++ b/BookingSeatPlan/BookingSeatPlan.csproj
@@ -49,6 +49,12 @@
     <Compile Include="Converter.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CourseException.cs" />
+    <Compile Include="SeatPlan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SeatPlan.Designer.cs">
+      <DependentUpon>SeatPlan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Start.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IOFile.cs" />
     <Compile Include="Validator.cs" />
+    <EmbeddedResource Include="SeatPlan.resx">
+      <DependentUpon>SeatPlan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
     </EmbeddedResource>
